--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,30 @@
       <version>4.3.2.RELEASE</version>
       <scope>compile</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.4.1</version>
+    </dependency>
+    
+    <dependency>
+      	<groupId>mysql</groupId>
+      	<artifactId>mysql-connector-java</artifactId>
+      	<version>5.1.6</version>
+    </dependency>
+    
+    <dependency>
+  		<groupId>org.mybatis</groupId>
+  		<artifactId>mybatis-spring</artifactId>
+  		<version>1.3.0</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>commons-dbcp</groupId>
+    	<artifactId>commons-dbcp</artifactId>
+    	<version>1.4</version>
+	</dependency>
   </dependencies>
   
   <build>
